--- a/source/index.html
+++ b/source/index.html
@@ -1,9 +1,147 @@
-{% set pageId = 0 %}
-{% set permalink = pages[pageId].path %}
-{% extends "./templates/_layout.twig" %}
+<!DOCTYPE html>
+<html class="page" lang="ru">
 
-{% block main %}
-<main>
-	Контент главной страницы
-</main>
-{% endblock %}
+<head>
+	<meta charset="UTF-8">
+	<title>CAT ENERGY</title>
+</head>
+
+<body class="page__body">
+	<header class="page-header">
+		<a class="page-header__logo" href="index.html">
+			<img class="page-header__logo-img" src="../source/img/cat-energy-logo-img.svg" alt="Логотип Cat Energy" width="60" height="50">
+			<img class="page-header__logo-text logo-text" src="../source/img/cat-energy-logo-text.svg" alt="Cat Energy" width="100" height="18">
+		</a>
+		<nav class="main-nav">
+			<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
+			<ul class="main-nav__list site-list">
+				<li class="site-list__item site-list__item--current">
+					<a href="index.html" aria-current="page">
+						Главная
+					</a>
+				</li>
+				<li class="site-list__item">
+					<a href="catalog.html">
+						Каталог продукции
+					</a>
+				</li>
+				<li class="site-list__item">
+					<a href="form.html">
+						Подбор продукции
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<main class="main-container">
+		<section class="cat-energy-description">
+			<h1 class="cat-energy-description__title">Функциональное
+				питание для котов</h1>
+			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
+			<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
+			<img class="cat-energy-description_img" src="../source/img/index-can-tablet.png" width="709" height="709" alt="Корм Cat energy pro со вкусом курицы">
+		</section>
+		<ul class="program-type">
+			<li class="program-type__card program-type__card--slim">
+				<h2 class="program-type__card-title">похудение</h2>
+				<p class="program-type__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+				<a class="program-type__card-button" href="catalog.html">каталог slim</a>
+			</li>
+			<li class="program-type__card program-type__card--pro">
+				<h2 class="program-type__card-title">набор массы</h2>
+				<p class="program-type__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+				<a class="program-type__card-button" href="catalog.html">каталог pro</a>
+			</li>
+		</ul>
+		<section class="cat-energy-advantages">
+			<h2 class="cat-energy-advantages__title">Как это работает</h2>
+			<ul class="cat-energy-advantages__list">
+				<li class="cat-energy-advantages__item cat-energy-adventages__item--1">
+					<p class="cat-energy-advantages__item-description">Функциональное питание содержит только полезные питательные вещества.</p>
+				</li>
+				<li class="cat-energy-advantages__item cat-energy-adventages__item--2">
+					<p class="cat-energy-advantages__item-description">Выпускается в виде порошка,
+						который нужно лишь залить
+						кипятком и готово.</p>
+				</li>
+				<li class="cat-energy-advantages__item cat-energy-adventages__item--3">
+					<p class="cat-energy-advantages__item-description">Замените один-два приема
+						обычной еды на наше
+						функциональное питание.</p>
+				</li>
+				<li class="cat-energy-advantages__item cat-energy-adventages__item--4">
+					<p class="cat-energy-advantages__item-description">Уже через месяц наслаждайтесь
+						изменениями к лучшему
+						вашего питомца!</p>
+				</li>
+			</ul>
+		</section>
+		<section class="example">
+			<h2 class="example__title">Живой пример</h2>
+			<p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+			<dl class="example__result-list">
+				<div class="example__result-item">
+					<dt class="example__result-number">5 кг</dt>
+					<dd class="example__result-description">снижение веса</dd>
+				</div>
+				<div class="example__result-item">
+					<dt class="example__result-number">60 дней</dt>
+					<dd class="example__result-description">затрачено времени</dd>
+				</div>
+			</dl>
+			<div class="example__result-total">
+				<p class="example__result-total-description">Затраты на питание:15 000 РУБ.</p>
+			</div>
+
+			<div class="before-after-slider">
+				<img class="before-after-slifer__image--before" src="#" alt="Толстый кот до похудения">
+				<button class="before-after-slider__button" type="button"></button>
+				<img class="before-after-slifer__image--after" src="#" alt="Худой кот после похудения">
+			</div>
+		</section>
+		<section class="cooperation">
+			<h2 class="cooperation__title">приглашаем
+				к сотрудничеству
+				дилеров!</h2>
+			<p class="cooperation__adress-street">ул. Большая
+				Конюшенная, д. 19/8</p>
+			<p class="cooperation__adress-city">Санкт-Петербург</p>
+			<div class="cooperation__adress-map">
+			</div>
+		</section>
+	</main>
+	<footer class="main-footer">
+		<div class="main-footer__wrapper">
+			<div class="main-footer__logo">
+				<a class="main-footer__logo-link" href="index.html">
+					<img class="logo-text" src="#" alt="Cat Energy">
+				</a>
+			</div>
+			<div class="main-footer__social">
+				<h2 class="visually-hidden">Социальные Сети Кэт Энержи</h2>
+				<ul class="main-footer__social-list">
+					<li class="main-footer__social-item">
+						<a class="main-footer__social-item-vk" href="#">
+						</a>
+					</li>
+					<li class="main-footer__social-item">
+						<a class="main-footer__social-item-youtube" href="#">
+						</a>
+					</li>
+					<li class="main-footer__social-item">
+						<a class="main-footer__social-item-telegram" href="#">
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="main-footer__copyright">
+				<a class="main-footer__copyright-link">
+					<img class="main-footer__copyright-logo-text" src="#" alt="Разработано в HTML Academy">
+					<img class="main-footer__copyright-logo-img" src="#" alt="Логотип HTML Academy">
+				</a>
+			</div>
+		</div>
+	</footer>
+</body>
+
+</html>
