--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
 <body class="page__body">
 	<header class="page-header">
 		<a class="page-header__logo" href="index.html">
-			<img class="page-header__logo-img" src="../source/img/cat-energy-logo-img.svg" alt="Логотип Cat Energy" width="60" height="50">
-			<img class="page-header__logo-text logo-text" src="../source/img/cat-energy-logo-text.svg" alt="Cat Energy" width="100" height="18">
+			<img class="page-header__logo-img" src="img/cat-energy-logo-img-desktop@1x.svg" alt="Логотип Cat Energy" width="70" height="60">
+			<img class="page-header__logo-text logo-text" src="img/cat-energy-logo-text-desktop@1x.svg" alt="Cat Energy" width="117" height="21">
 		</a>
 		<nav class="main-nav">
 			<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -39,7 +39,7 @@
 				питание для котов</h1>
 			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
 			<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
-			<img class="cat-energy-description_img" src="../source/img/index-can-tablet.png" width="709" height="709" alt="Корм Cat energy pro со вкусом курицы">
+			<img class="cat-energy-description_img" src="img/index-can-desktop@1x.png" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы">
 		</section>
 		<ul class="program-type">
 			<li class="program-type__card program-type__card--slim">
@@ -53,24 +53,24 @@
 				<a class="program-type__card-button" href="catalog.html">каталог pro</a>
 			</li>
 		</ul>
-		<section class="cat-energy-advantages">
-			<h2 class="cat-energy-advantages__title">Как это работает</h2>
-			<ul class="cat-energy-advantages__list">
-				<li class="cat-energy-advantages__item cat-energy-adventages__item--1">
-					<p class="cat-energy-advantages__item-description">Функциональное питание содержит только полезные питательные вещества.</p>
+		<section class="advantages">
+			<h2 class="advantages__title">Как это работает</h2>
+			<ul class="advantages__list">
+				<li class="advantages__item advantages__item--icon-leaf">
+					<p class="advantages__item-description">Функциональное питание содержит только полезные питательные вещества.</p>
 				</li>
-				<li class="cat-energy-advantages__item cat-energy-adventages__item--2">
-					<p class="cat-energy-advantages__item-description">Выпускается в виде порошка,
+				<li class="advantages__item advantages__item--icon-pot">
+					<p class="advantages__item-description">Выпускается в виде порошка,
 						который нужно лишь залить
 						кипятком и готово.</p>
 				</li>
-				<li class="cat-energy-advantages__item cat-energy-adventages__item--3">
-					<p class="cat-energy-advantages__item-description">Замените один-два приема
+				<li class="advantages__item advantages__item--icon-cutlery">
+					<p class="advantages__item-description">Замените один-два приема
 						обычной еды на наше
 						функциональное питание.</p>
 				</li>
-				<li class="cat-energy-advantages__item cat-energy-adventages__item--4">
-					<p class="cat-energy-advantages__item-description">Уже через месяц наслаждайтесь
+				<li class="advantages__item advantages__item--icon-alarm">
+					<p class="advantages__item-description">Уже через месяц наслаждайтесь
 						изменениями к лучшему
 						вашего питомца!</p>
 				</li>
@@ -94,9 +94,9 @@
 			</div>
 
 			<div class="before-after-slider">
-				<img class="before-after-slifer__image--before" src="#" alt="Толстый кот до похудения">
+				<img class="before-after-slider__image before-after-slider__image--before" src="#" alt="Толстый кот до похудения">
 				<button class="before-after-slider__button" type="button"></button>
-				<img class="before-after-slifer__image--after" src="#" alt="Худой кот после похудения">
+				<img class="before-after-slider__image before-after-slider__image--after" src="#" alt="Худой кот после похудения">
 			</div>
 		</section>
 		<section class="cooperation">
@@ -114,7 +114,7 @@
 		<div class="main-footer__wrapper">
 			<div class="main-footer__logo">
 				<a class="main-footer__logo-link" href="index.html">
-					<img class="logo-text" src="#" alt="Cat Energy">
+					<img class="logo-text" src="img/cat-energy-logo-text-desktop@1x.svg" alt="Cat Energy" width="128" height="24">
 				</a>
 			</div>
 			<div class="main-footer__social">
@@ -143,5 +143,3 @@
 		</div>
 	</footer>
 </body>
-
-</html>
