add fixes to markup

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,8 +9,8 @@
 <body class="page__body">
 	<header class="page-header">
 		<a class="page-header__logo" href="index.html">
-			<img class="page-header__logo-img" src="img/cat-energy-logo-img-desktop@1x.svg" alt="Логотип Cat Energy" width="70" height="60">
-			<img class="page-header__logo-text logo-text" src="img/cat-energy-logo-text-desktop@1x.svg" alt="Cat Energy" width="117" height="21">
+			<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy" width="70" height="60">
+			<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy" width="117" height="21">
 		</a>
 		<nav class="main-nav">
 			<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -42,7 +42,7 @@
 					<a class="product-card__link" href="#">
 						<h3 class="product-card__label">Cat Energy PRO
 							500 г</h3>
-						<img class="product-card__img" src="#" alt="#">
+						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
 					<dl class="product-card__description">
 						<dt class="product-card__description-item">Масса</dt>
@@ -59,7 +59,7 @@
 					<a class="product-card__link" href="#">
 						<h3 class="product-card__label">Cat Energy PRO
 							1000 г</h3>
-						<img class="product-card__img" src="#" alt="#">
+						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
 					<dl class="product-card__description">
 						<dt class="product-card__description-item">Масса</dt>
@@ -76,7 +76,7 @@
 					<a class="product-card__link" href="#">
 						<h3 class="product-card__label">Cat Energy PRO
 							500 г</h3>
-						<img class="product-card__img" src="#" alt="#">
+						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
 					<dl class="product-card__description">
 						<dt class="product-card__description-item">Масса</dt>
@@ -93,7 +93,7 @@
 					<a class="product-card__link" href="#">
 						<h3 class="product-card__label">Cat Energy PRO
 							1000 г</h3>
-						<img class="product-card__img" src="#" alt="#">
+						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
 					<dl class="product-card__description">
 						<dt class="product-card__description-item">Масса</dt>
@@ -110,7 +110,7 @@
 					<a class="product-card__link" href="#">
 						<h3 class="product-card__label">Cat Energy slim
 							500 г</h3>
-						<img class="product-card__img" src="#" alt="#">
+						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
 					<dl class="product-card__description">
 						<dt class="product-card__description-item">Масса</dt>
@@ -127,7 +127,7 @@
 					<a class="product-card__link" href="#">
 						<h3 class="product-card__label">Cat Energy slim
 							1000 г</h3>
-						<img class="product-card__img" src="#" alt="#">
+						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
 					<dl class="product-card__description">
 						<dt class="product-card__description-item">Масса</dt>
@@ -144,7 +144,7 @@
 					<a class="product-card__link" href="#">
 						<h3 class="product-card__label">Cat Energy slim
 							500 г</h3>
-						<img class="product-card__img" src="#" alt="#">
+						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
 					<dl class="product-card__description">
 						<dt class="product-card__description-item">Масса</dt>
@@ -208,7 +208,8 @@
 			<p class="cooperation__adress-street">ул. Большая
 				Конюшенная, д. 19/8</p>
 			<p class="cooperation__adress-city">Санкт-Петербург</p>
-			<div class="cooperation__adress-map">
+			<div class="cooperation__adress-map map">
+				<img class="map__image" src="http://placekitten.com/320/362" alt="#">
 			</div>
 		</section>
 	</main>
@@ -216,7 +217,7 @@
 		<div class="main-footer__wrapper">
 			<div class="main-footer__logo">
 				<a class="main-footer__logo-link" href="index.html">
-					<img class="logo-text" src="img/cat-energy-logo-text-desktop@1x.svg" alt="Cat Energy" width="128" height="24">
+					<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy" width="128" height="24">
 				</a>
 			</div>
 			<div class="main-footer__social">
@@ -238,8 +239,8 @@
 			</div>
 			<div class="main-footer__copyright">
 				<a class="main-footer__copyright-link">
-					<img class="main-footer__copyright-logo-text" src="#" alt="Разработано в HTML Academy">
-					<img class="main-footer__copyright-logo-img" src="#" alt="Логотип HTML Academy">
+					<img class="main-footer__copyright-logo-text" src="http://placekitten.com/113/19" alt="Разработано в HTML Academy">
+					<img class="main-footer__copyright-logo-img" src="http://placekitten.com/27/34" alt="Логотип HTML Academy">
 				</a>
 			</div>
 		</div>
