--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
 <body class="page__body">
 	<header class="page-header">
 		<a class="page-header__logo" href="index.html">
-			<img class="page-header__logo-img" src="img/cat-energy-logo-img-desktop@1x.svg" alt="Логотип Cat Energy" width="70" height="60">
-			<img class="page-header__logo-text logo-text" src="img/cat-energy-logo-text-desktop@1x.svg" alt="Cat Energy" width="117" height="21">
+			<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy" width="70" height="60">
+			<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy" width="117" height="21">
 		</a>
 		<nav class="main-nav">
 			<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -39,7 +39,7 @@
 				питание для котов</h1>
 			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
 			<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
-			<img class="cat-energy-description_img" src="img/index-can-desktop@1x.png" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы">
+			<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы">
 		</section>
 		<ul class="program-type">
 			<li class="program-type__card program-type__card--slim">
@@ -94,9 +94,9 @@
 			</div>
 
 			<div class="before-after-slider">
-				<img class="before-after-slider__image before-after-slider__image--before" src="#" alt="Толстый кот до похудения">
+				<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения">
 				<button class="before-after-slider__button" type="button"></button>
-				<img class="before-after-slider__image before-after-slider__image--after" src="#" alt="Худой кот после похудения">
+				<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения">
 			</div>
 		</section>
 		<section class="cooperation">
@@ -106,7 +106,8 @@
 			<p class="cooperation__adress-street">ул. Большая
 				Конюшенная, д. 19/8</p>
 			<p class="cooperation__adress-city">Санкт-Петербург</p>
-			<div class="cooperation__adress-map">
+			<div class="cooperation__adress-map map">
+				<img class="map__image" src="http://placekitten.com/320/362" alt="#">
 			</div>
 		</section>
 	</main>
@@ -114,7 +115,7 @@
 		<div class="main-footer__wrapper">
 			<div class="main-footer__logo">
 				<a class="main-footer__logo-link" href="index.html">
-					<img class="logo-text" src="img/cat-energy-logo-text-desktop@1x.svg" alt="Cat Energy" width="128" height="24">
+					<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy" width="128" height="24">
 				</a>
 			</div>
 			<div class="main-footer__social">
@@ -136,8 +137,8 @@
 			</div>
 			<div class="main-footer__copyright">
 				<a class="main-footer__copyright-link">
-					<img class="main-footer__copyright-logo-text" src="#" alt="Разработано в HTML Academy">
-					<img class="main-footer__copyright-logo-img" src="#" alt="Логотип HTML Academy">
+					<img class="main-footer__copyright-logo-text" src="http://placekitten.com/113/19" alt="Разработано в HTML Academy">
+					<img class="main-footer__copyright-logo-img" src="http://placekitten.com/27/34" alt="Логотип HTML Academy">
 				</a>
 			</div>
 		</div>
