add fixes to markup

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,8 +9,8 @@
 <body class="page__body">
 	<header class="page-header">
 		<a class="page-header__logo" href="index.html">
-			<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy" width="70" height="60">
-			<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy" width="117" height="21">
+			<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy." width="70" height="60">
+			<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy." width="117" height="21">
 		</a>
 		<nav class="main-nav">
 			<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -44,15 +44,15 @@
 							500 г</h3>
 						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
-					<dl class="product-card__description">
-						<dt class="product-card__description-item">Масса</dt>
-						<dd class="product-card__description-value">500 г</dd>
-						<dt class="product-card__description-item">Вкус</dt>
-						<dd class="product-card__description-value">Курица</dd>
-						<dt class="product-card__description-item">Цена</dt>
-						<dd class="product-card__description-value">700 ₽</dd>
-					</dl>
-					<button class="product-card__button button" type="button">заказать</button>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Курица</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">700 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 
 				</li>
 				<li class="catalog__card-item product-card">
@@ -61,15 +61,15 @@
 							1000 г</h3>
 						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
-					<dl class="product-card__description">
-						<dt class="product-card__description-item">Масса</dt>
-						<dd class="product-card__description-value">1000 г</dd>
-						<dt class="product-card__description-item">Вкус</dt>
-						<dd class="product-card__description-value">Курица</dd>
-						<dt class="product-card__description-item">Цена</dt>
-						<dd class="product-card__description-value">1000 ₽</dd>
-					</dl>
-					<button class="product-card__button button" type="button">заказать</button>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">1000 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Курица</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">1000 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 
 				</li>
 				<li class="catalog__card-item product-card">
@@ -78,15 +78,15 @@
 							500 г</h3>
 						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
-					<dl class="product-card__description">
-						<dt class="product-card__description-item">Масса</dt>
-						<dd class="product-card__description-value">500 г</dd>
-						<dt class="product-card__description-item">Вкус</dt>
-						<dd class="product-card__description-value">Рыба</dd>
-						<dt class="product-card__description-item">Цена</dt>
-						<dd class="product-card__description-value">700 ₽</dd>
-					</dl>
-					<button class="product-card__button button" type="button">заказать</button>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Рыба</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">700 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 
 				</li>
 				<li class="catalog__card-item product-card">
@@ -95,15 +95,15 @@
 							1000 г</h3>
 						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
-					<dl class="product-card__description">
-						<dt class="product-card__description-item">Масса</dt>
-						<dd class="product-card__description-value">1000 г</dd>
-						<dt class="product-card__description-item">Вкус</dt>
-						<dd class="product-card__description-value">Рыба</dd>
-						<dt class="product-card__description-item">Цена</dt>
-						<dd class="product-card__description-value">1000 ₽</dd>
-					</dl>
-					<button class="product-card__button button" type="button">заказать</button>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">1000 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Рыба</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">1000 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 
 				</li>
 				<li class="catalog__card-item product-card">
@@ -112,15 +112,15 @@
 							500 г</h3>
 						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
-					<dl class="product-card__description">
-						<dt class="product-card__description-item">Масса</dt>
-						<dd class="product-card__description-value">500 г</dd>
-						<dt class="product-card__description-item">Вкус</dt>
-						<dd class="product-card__description-value">Гречка</dd>
-						<dt class="product-card__description-item">Цена</dt>
-						<dd class="product-card__description-value">400 ₽</dd>
-					</dl>
-					<button class="product-card__button button" type="button">заказать</button>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Гречка</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">400 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 
 				</li>
 				<li class="catalog__card-item product-card">
@@ -129,15 +129,15 @@
 							1000 г</h3>
 						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
-					<dl class="product-card__description">
-						<dt class="product-card__description-item">Масса</dt>
-						<dd class="product-card__description-value">1000 г</dd>
-						<dt class="product-card__description-item">Вкус</dt>
-						<dd class="product-card__description-value">Гречка</dd>
-						<dt class="product-card__description-item">Цена</dt>
-						<dd class="product-card__description-value">700 ₽</dd>
-					</dl>
-					<button class="product-card__button button" type="button">заказать</button>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">1000 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Гречка</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">700 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 
 				</li>
 				<li class="catalog__card-item product-card">
@@ -146,15 +146,15 @@
 							500 г</h3>
 						<img class="product-card__img" src="http://placekitten.com/140/112" alt="#">
 					</a>
-					<dl class="product-card__description">
-						<dt class="product-card__description-item">Масса</dt>
-						<dd class="product-card__description-value">500 г</dd>
-						<dt class="product-card__description-item">Вкус</dt>
-						<dd class="product-card__description-value">Рис</dd>
-						<dt class="product-card__description-item">Цена</dt>
-						<dd class="product-card__description-value">500 ₽</dd>
-					</dl>
-					<button class="product-card__button button" type="button">заказать</button>
+					<div class="product-card__description">
+						<p class="product-card__description-item">Масса</p>
+						<p class="product-card__description-value">500 г</p>
+						<p class="product-card__description-item">Вкус</p>
+						<p class="product-card__description-value">Рис</p>
+						<p class="product-card__description-item">Цена</p>
+						<p class="product-card__description-value">500 ₽</p>
+					</div>
+					<a class="product-card__button button" href="#">Заказать</a>
 
 				</li>
 				<li class="catalog__card-show-more">
@@ -162,7 +162,7 @@
 						100500 товаров</h3>
 					<p class="catalog__card-show-more-description">На самом деле вкусов
 						гораздо больше!</p>
-					<button class="catalog__card-show-more-button">показать все</button>
+					<a class="catalog__card-show-more-button" aria-current="page" href="catalog.html">Показать все</a>
 				</li>
 			</ul>
 		</section>
@@ -173,25 +173,25 @@
 					<h3 class="additional-product-card__label">Сахарозаменитель</h3>
 					<p class="additional-product-card__quantity">1 упаковка (100 г)</p>
 					<p class="additional-product-card__price">200 ₽</p>
-					<button class="additional-product-card__button button">заказать</button>
+					<button class="additional-product-card__button button">Заказать</button>
 				</li>
 				<li class="additional-catalog__item additional-product-card">
 					<h3 class="additional-product-card__label">Питьевая вода</h3>
 					<p class="additional-product-card__quantity">5 литров</p>
 					<p class="additional-product-card__price">50 ₽</p>
-					<button class="additional-product-card__button button">заказать</button>
+					<button class="additional-product-card__button button">Заказать</button>
 				</li>
 				<li class="additional-catalog__item additional-product-card">
-					<h3 class="additional-product-card__label">молоко</h3>
+					<h3 class="additional-product-card__label">Молоко</h3>
 					<p class="additional-product-card__quantity">1 литр</p>
 					<p class="additional-product-card__price">100 ₽</p>
-					<button class="additional-product-card__button button">заказать</button>
+					<button class="additional-product-card__button button">Заказать</button>
 				</li>
 				<li class="additional-catalog__item additional-product-card">
-					<h3 class="additional-product-card__label">витамины</h3>
+					<h3 class="additional-product-card__label">Витамины</h3>
 					<p class="additional-product-card__quantity">1 упаковка (30 г)</p>
 					<p class="additional-product-card__price">300 ₽</p>
-					<button class="additional-product-card__button button">заказать</button>
+					<button class="additional-product-card__button button">Заказать</button>
 				</li>
 			</ul>
 			<article class="promotion">
@@ -202,7 +202,7 @@
 			</article>
 		</section>
 		<section class="cooperation">
-			<h2 class="cooperation__title">приглашаем
+			<h2 class="cooperation__title">Приглашаем
 				к сотрудничеству
 				дилеров!</h2>
 			<p class="cooperation__adress-street">ул. Большая
@@ -217,30 +217,33 @@
 		<div class="main-footer__wrapper">
 			<div class="main-footer__logo">
 				<a class="main-footer__logo-link" href="index.html">
-					<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy" width="128" height="24">
+					<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy." width="128" height="24">
 				</a>
 			</div>
 			<div class="main-footer__social">
 				<h2 class="visually-hidden">Социальные Сети Кэт Энержи</h2>
 				<ul class="main-footer__social-list">
 					<li class="main-footer__social-item">
+						<h3 class="visually-hidden">Вконтакте</h3>
 						<a class="main-footer__social-item-vk" href="#">
 						</a>
 					</li>
 					<li class="main-footer__social-item">
+						<h3 class="visually-hidden">YouTube</h3>
 						<a class="main-footer__social-item-youtube" href="#">
 						</a>
 					</li>
 					<li class="main-footer__social-item">
+						<h3 class="visually-hidden">Телеграм</h3>
 						<a class="main-footer__social-item-telegram" href="#">
 						</a>
 					</li>
 				</ul>
 			</div>
 			<div class="main-footer__copyright">
-				<a class="main-footer__copyright-link">
-					<img class="main-footer__copyright-logo-text" src="http://placekitten.com/113/19" alt="Разработано в HTML Academy">
-					<img class="main-footer__copyright-logo-img" src="http://placekitten.com/27/34" alt="Логотип HTML Academy">
+				<a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+					<h2 class="main-footer__copyright-title">HTML Academy</h2>
+					<img class="main-footer__copyright-logo-img" src="http://placekitten.com/27/34" alt="Логотип HTML Academy.">
 				</a>
 			</div>
 		</div>
