--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
 <body class="page__body">
 	<header class="page-header">
 		<a class="page-header__logo" href="index.html">
-			<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy" width="70" height="60">
-			<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy" width="117" height="21">
+			<img class="page-header__logo-img" src="http://placekitten.com/70/60" alt="Логотип Cat Energy." width="70" height="60">
+			<img class="page-header__logo-text logo-text" src="http://placekitten.com/117/21" alt="Cat Energy." width="117" height="21">
 		</a>
 		<nav class="main-nav">
 			<button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -39,40 +39,39 @@
 				питание для котов</h1>
 			<p class="cat-energy-description__text">Занялся собой? Займись котом!</p>
 			<a class="cat-energy-description__button button" href="form.html">подобрать программу</a>
-			<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы">
+			<img class="cat-energy-description_img" src="http://placekitten.com/280/270" width="552" height="449" alt="Корм Cat energy pro со вкусом курицы.">
 		</section>
 		<ul class="program-type">
 			<li class="program-type__card program-type__card--slim">
-				<h2 class="program-type__card-title">похудение</h2>
+				<h2 class="program-type__card-title">Похудение</h2>
 				<p class="program-type__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
 				<a class="program-type__card-button" href="catalog.html">каталог slim</a>
 			</li>
 			<li class="program-type__card program-type__card--pro">
-				<h2 class="program-type__card-title">набор массы</h2>
+				<h2 class="program-type__card-title">Набор массы</h2>
 				<p class="program-type__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-				<a class="program-type__card-button" href="catalog.html">каталог pro</a>
+				<a class="program-type__card-button" href="catalog.html">Каталог pro</a>
 			</li>
 		</ul>
 		<section class="advantages">
 			<h2 class="advantages__title">Как это работает</h2>
 			<ul class="advantages__list">
 				<li class="advantages__item advantages__item--icon-leaf">
-					<p class="advantages__item-description">Функциональное питание содержит только полезные питательные вещества.</p>
+					Функциональное питание содержит только полезные питательные вещества.
 				</li>
-				<li class="advantages__item advantages__item--icon-pot">
-					<p class="advantages__item-description">Выпускается в виде порошка,
-						который нужно лишь залить
-						кипятком и готово.</p>
+				<li class="advantages__item advantages__item--icon-pot">Выпускается в виде порошка,
+					который нужно лишь залить
+					кипятком и готово.
 				</li>
 				<li class="advantages__item advantages__item--icon-cutlery">
-					<p class="advantages__item-description">Замените один-два приема
-						обычной еды на наше
-						функциональное питание.</p>
+					Замените один-два приема
+					обычной еды на наше
+					функциональное питание.
 				</li>
 				<li class="advantages__item advantages__item--icon-alarm">
-					<p class="advantages__item-description">Уже через месяц наслаждайтесь
-						изменениями к лучшему
-						вашего питомца!</p>
+					Уже через месяц наслаждайтесь
+					изменениями к лучшему
+					вашего питомца!
 				</li>
 			</ul>
 		</section>
@@ -88,15 +87,17 @@
 					<dt class="example__result-number">60 дней</dt>
 					<dd class="example__result-description">затрачено времени</dd>
 				</div>
+				<div class="example__result-item">
+					<dt class="example__result-number example__result-number--total">15 000 РУБ.</dt>
+					<dd class="example__result-description example__result-description--total">Затраты на питание:</dd>
+				</div>
 			</dl>
-			<div class="example__result-total">
-				<p class="example__result-total-description">Затраты на питание:15 000 РУБ.</p>
-			</div>
+
 
 			<div class="before-after-slider">
-				<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения">
+				<img class="before-after-slider__image before-after-slider__image--before" src="http://placekitten.com/280/256" alt="Толстый кот до похудения.">
 				<button class="before-after-slider__button" type="button"></button>
-				<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения">
+				<img class="before-after-slider__image before-after-slider__image--after" src="http://placekitten.com/280/256" alt="Худой кот после похудения.">
 			</div>
 		</section>
 		<section class="cooperation">
@@ -115,30 +116,33 @@
 		<div class="main-footer__wrapper">
 			<div class="main-footer__logo">
 				<a class="main-footer__logo-link" href="index.html">
-					<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy" width="128" height="24">
+					<img class="logo-text" src="http://placekitten.com/128/24" alt="Cat Energy." width="128" height="24">
 				</a>
 			</div>
 			<div class="main-footer__social">
 				<h2 class="visually-hidden">Социальные Сети Кэт Энержи</h2>
 				<ul class="main-footer__social-list">
 					<li class="main-footer__social-item">
+						<h3 class="visually-hidden">Вконтакте</h3>
 						<a class="main-footer__social-item-vk" href="#">
 						</a>
 					</li>
 					<li class="main-footer__social-item">
+						<h3 class="visually-hidden">YouTube</h3>
 						<a class="main-footer__social-item-youtube" href="#">
 						</a>
 					</li>
 					<li class="main-footer__social-item">
+						<h3 class="visually-hidden">Телеграм</h3>
 						<a class="main-footer__social-item-telegram" href="#">
 						</a>
 					</li>
 				</ul>
 			</div>
 			<div class="main-footer__copyright">
-				<a class="main-footer__copyright-link">
-					<img class="main-footer__copyright-logo-text" src="http://placekitten.com/113/19" alt="Разработано в HTML Academy">
-					<img class="main-footer__copyright-logo-img" src="http://placekitten.com/27/34" alt="Логотип HTML Academy">
+				<a class="main-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+					<h2 class="main-footer__copyright-title">HTML Academy</h2>
+					<img class="main-footer__copyright-logo-img" src="http://placekitten.com/27/34" alt="Логотип HTML Academy.">
 				</a>
 			</div>
 		</div>
